Improved feedback for exporting subtitles in integrations page

--- a/scss/elements/_list_view.scss
+++ b/scss/elements/_list_view.scss
@@ -246,6 +246,7 @@
       phone: (".syncHistoryList-title"),
       tablet: (".syncHistoryList-language"),
       laptop: (".syncHistoryList-channel", ".syncHistoryList-platform", ".listView-actions"),
+      desktop: (".syncHistoryList-date"),
     ));
   }
 
