js for video feeds page

--- a/scss/elements/_list_view.scss
+++ b/scss/elements/_list_view.scss
@@ -236,4 +236,11 @@
       tablet: (".listView-actions", ".videoUrls-badges"),
     ));
   }
+
+  &.videoFeedsList {
+    @include listView((
+      phone: (".videoFeedsList-title"),
+      tablet: (".listView-actions"),
+    ));
+  }
 }
