Updated listview style for video feeds page

--- a/scss/elements/_list_view.scss
+++ b/scss/elements/_list_view.scss
@@ -249,7 +249,7 @@
   &.videoFeedsList {
     @include listView((
       phone: (".videoFeedsList-title"),
-      tablet: (".listView-actions"),
+      tablet: (".videoFeedsList-title", ".listView-actions"),
     ));
   }
 }
