Updating footer layout now that the staff button is there

--- a/scss/layout/_page_footer.scss
+++ b/scss/layout/_page_footer.scss
@@ -59,7 +59,7 @@
     text-align: center;
     #footernav {
       float: none;
-      ul {
+      ul.nav {
         display: inline-block;
         margin: 0 auto;
       }
