--- a/scss/elements/_forms.scss
+++ b/scss/elements/_forms.scss
@@ -608,7 +608,7 @@ fieldset {
 
   fieldset {
     // Handle nested fieldsets
-    margin: 0 -20px;
+    margin: -20px -20px 0 -20px;
     border: none;
 
     legend {
