Adding accorion styles

--- a/scss/application.scss
+++ b/scss/application.scss
@@ -48,6 +48,7 @@
 @import 'application/elements/filtered_list';
 @import 'elements/video_card';
 @import 'elements/select_list';
+@import 'elements/accordion';
 @import 'application/elements/subtitles';
 @import 'application/elements/subtitles_list';
 @import 'elements/dialogs';
