--- a/scss/marketing.scss
+++ b/scss/marketing.scss
@@ -47,6 +47,7 @@
 @import 'elements/select';
 @import 'elements/pricing-table';
 @import 'elements/dropdowns';
+@import 'elements/accordion';
 
 // Views
 @import "views/home";
