Couple style updates
- Fixed some issues with the accordion
- Updated the fieldset CSS to work better with the messaging settings
  page

--- a/scss/elements/_forms.scss
+++ b/scss/elements/_forms.scss
@@ -606,15 +606,16 @@ fieldset {
     }
   }
 
-  fieldset {
-    // Handle nested fieldsets
+  // Handle nested fieldsets
+  fieldset.full-width {
     margin: -20px -20px 0 -20px;
     border: none;
 
-    legend {
-      background-color: $snow;
-      color: $charcoal;
-    }
+  }
+
+  fieldset legend {
+    background-color: $snow;
+    color: $charcoal;
   }
 
 }
