--- a/scss/elements/_accordion.scss
+++ b/scss/elements/_accordion.scss
@@ -1,7 +1,7 @@
 
 .accordion-title {
   padding: 12px 16px;
-  margin: 0 0 12px 0;
+  margin: 0;
   background: $lime;
   color: $white;
   position: relative;
