--- a/scss/elements/_buttons.scss
+++ b/scss/elements/_buttons.scss
@@ -210,3 +210,21 @@ button {
     pointer-events: none;
   }
 }
+
+.expandButton {
+  display: flex;
+  align-items: center;
+  @extend .bg-teal;
+  text-align: left;
+  padding: 0 13px;
+  height: 39px;
+  @include transition(0.5s);
+  overflow: hidden;
+  white-space: nowrap;
+
+}
+
+.expandButton-text {
+  margin-left: 4px;
+  display: none;
+}
