Added the legend-extra class
This is going to be used for the plus button on the messaging page

Also refactored the legend/fieldset CSS a bit

--- a/scss/elements/_buttons.scss
+++ b/scss/elements/_buttons.scss
@@ -215,6 +215,7 @@ button {
   display: flex;
   align-items: center;
   @extend .bg-teal;
+  font-size: $font-size-normal;
   text-align: left;
   padding: 0 13px;
   height: 39px;
