Added a small margin to the  top of tables

--- a/scss/elements/_tables.scss
+++ b/scss/elements/_tables.scss
@@ -2,6 +2,7 @@
   width: 100%;
   max-width: 100%;
   margin-bottom: 20px;
+  margin-top: 4px;
   border-collapse: collapse;
   border-spacing: 0;
   background-color: transparent;
