--- a/scss/application.scss
+++ b/scss/application.scss
@@ -68,6 +68,7 @@
 @import 'elements/pricing-table';
 @import 'application/elements/workflow_diagram';
 @import 'application/elements/workflow_settings';
+@import 'application/elements/integrations_settings';
 @import 'elements/split_button';
 @import 'elements/badges';
 @import 'elements/banner';
