Added class .a-tag-font - global  styling extends .a-tag-font

--- a/scss/base/_global.scss
+++ b/scss/base/_global.scss
@@ -15,9 +15,13 @@ section {
   }
 }
 
-a {
+.a-tag-font {
   color: $teal;
   font-weight: 600;
+}
+
+a {
+  @extend .a-tag-font;
   text-decoration: underline;
   &:hover {
     color: $lime;
